--- a/complex titanic.ipynb
+++ b/complex titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "7800e447",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -22,17 +22,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/titanic/train.csv\n",
-      "/kaggle/input/titanic/test.csv\n",
-      "/kaggle/input/titanic/gender_submission.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This Python 3 environment comes with many helpful analytics libraries installed\n",
     "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
@@ -55,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "44936e02",
    "metadata": {
     "execution": {
@@ -91,13 +81,13 @@
        " 'Embarked']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = pd.read_csv('/kaggle/input/titanic/train.csv')\n",
+    "train_data = pd.read_csv('train.csv')\n",
     "#train_data.head()\n",
     "\n",
     "train_data.columns\n",
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "88d58fc3",
    "metadata": {
     "execution": {
@@ -250,19 +240,19 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data = pd.read_csv('/kaggle/input/titanic/test.csv')\n",
+    "test_data = pd.read_csv('test.csv')\n",
     "test_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "1fe4351d",
    "metadata": {
     "execution": {
@@ -287,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "9224b63b",
    "metadata": {
     "execution": {
@@ -315,14 +305,6 @@
       "average age on the boat: 30\n",
       "% of people under 24 years to survive: 31.17\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/dist-packages/pandas/core/computation/expressions.py:73: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  return op(a, b)\n"
-     ]
     }
    ],
    "source": [
@@ -344,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "1dbff3bb",
    "metadata": {
     "execution": {
@@ -381,12 +363,252 @@
     "\n",
     "model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
     "model.fit(X, y)\n",
-    "predictions = model.predict(X_test)"
+    "predictions = model.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "f2491031",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"#now let's upgrade our data:\\n\\ndef remove_columns(df):\\n    df.columns = df.columns.str.strip()\\n    df = df.drop(columns = ['Name', 'Ticket', 'Cabin'])\\n    return df\\n\\ndef fill_missing_values(df):\\n    most_freq = df['Embarked'].mode()[0]\\n    df['Embarked'] = df['Embarked'].fillna(most_freq)\\n    median_age = df['Age'].median()\\n    df['Age'] = df['Age'].fillna(median_age)\\n    median_fare = df['Fare'].median()\\n    df['Fare'] = df['Fare'].fillna(median_fare)\\n    return df\\n\\n#def add_features(df):\\n\\ntrain_data=remove_columns(train_data)\\ntrain_data=fill_missing_values(train_data)\\n\\ntest_data=remove_columns(test_data)\\ntest_data=fill_missing_values(test_data)\\n\\n\""
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9409f28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "19f492e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import some more things\n",
+    "\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.model_selection import train_test_split,GridSearchCV, StratifiedKFold,RandomizedSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e9ca808f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = [\"Pclass\", \"SibSp\", \"Parch\", \"Age\", \"Fare\"]  \n",
+    "cat = [\"Sex\", \"Embarked\"]\n",
+    "\n",
+    "\n",
+    "preprocess = ColumnTransformer([\n",
+    "    (\"num\", SimpleImputer(strategy=\"median\"), num),\n",
+    "    (\"cat\", Pipeline([\n",
+    "        (\"imp\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "        (\"ohe\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "    ]), cat),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "aa207efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val accuracy: 0.7985074626865671\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Pipeline([\n",
+    "    (\"prep\", preprocess),\n",
+    "    (\"clf\", RandomForestClassifier(n_estimators=200, max_depth=6, random_state=42)),\n",
+    "])\n",
+    "\n",
+    "X = train_data[num + cat]\n",
+    "y = train_data[\"Survived\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "print(\"Val accuracy:\", model.score(X_test, y_test))\n",
+    "\n",
+    "predictions = model.predict(test_data[num + cat])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f3d6e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params: {'clf__class_weight': None, 'clf__max_depth': None, 'clf__max_features': None, 'clf__min_samples_leaf': 2, 'clf__min_samples_split': 13, 'clf__n_estimators': 374}\n",
+      "Best CV-Presicion: 0.84509446990145\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now let's try to select what feature are important\n",
+    "\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "param_grid = {\n",
+    "    \"clf__n_estimators\": randint(150, 701),           # 200..700\n",
+    "    \"clf__max_depth\": [None] + list(range(3, 13)),    # None or 3..12\n",
+    "    \"clf__min_samples_leaf\": randint(1, 8),           # 1..5\n",
+    "    \"clf__min_samples_split\": randint(2, 14),         # 2..10\n",
+    "    \"clf__max_features\": [\"sqrt\", None, 0.5, 0.8],\n",
+    "    \"clf__class_weight\": [None, \"balanced\"],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "rs = RandomizedSearchCV(\n",
+    "    estimator=model,\n",
+    "    param_distributions=param_grid,\n",
+    "    n_iter=55,              # \n",
+    "    cv=cv,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "rs.fit(X, y)\n",
+    "print(\"Best Params:\", rs.best_params_)\n",
+    "print(\"Best CV-Presicion:\", rs.best_score_)\n",
+    "\n",
+    "best_model = rs.best_estimator_   # уже дообучен на всем X,y\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f710eb5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nimport matplotlib.pyplot as plt\\n\\n# --- 0) Забираем результаты CV ---\\ncvres = pd.DataFrame(rs.cv_results_)  # если GridSearchCV: gs.cv_results_\\ncols = [\\'mean_test_score\\',\\'std_test_score\\',\\'rank_test_score\\'] +        [c for c in cvres.columns if c.startswith(\\'param_\\')]\\ndf = cvres[cols].sort_values(\\'rank_test_score\\').reset_index(drop=True)\\n\\nbest_score = rs.best_score_\\nbest_params = rs.best_params_\\nprint(\"Лучшие параметры:\", best_params)\\nprint(f\"Лучшая средняя CV-точность: {best_score:.4f}\")\\n\\n# --- 1) Топ-20 конфигураций ---\\ntopn = 20 if len(df) >= 20 else len(df)\\nplt.figure(figsize=(10,5))\\nplt.bar(range(topn), df.loc[:topn-1, \\'mean_test_score\\'])\\nplt.axhline(best_score, linestyle=\\'--\\')\\nplt.xticks(range(topn), df.loc[:topn-1, \\'rank_test_score\\'], rotation=0)\\nplt.xlabel(\\'rank_test_score (меньше = лучше)\\')\\nplt.ylabel(\\'CV accuracy\\')\\nplt.title(\\'Топ-конфигурации по CV\\')\\nplt.tight_layout()\\nplt.show()\\n\\n\\nparam_names = [c for c in df.columns if c.startswith(\\'param_\\')]\\n\\ndef scatter_param(df, pname):\\n    x = df[pname].astype(str)  # в cv_results_ часто object; приводим к строкам для стабильности\\n    y = df[\\'mean_test_score\\']\\n    # кодируем категории в числа для оси X\\n    codes, cats = pd.factorize(x)\\n    plt.figure(figsize=(8,4))\\n    plt.scatter(codes, y, alpha=0.7)\\n    plt.axhline(best_score, linestyle=\\'--\\')\\n    plt.xticks(range(len(cats)), cats, rotation=45, ha=\\'right\\')\\n    plt.xlabel(pname.replace(\\'param_\\', \\'\\'))\\n    plt.ylabel(\\'CV accuracy\\')\\n    plt.title(f\\'Поиск по {pname.replace(\"param_\",\"\")}\\')\\n    plt.tight_layout()\\n    plt.show()\\n\\nfor p in param_names:\\n    scatter_param(df, p)\\n\\n\\n\\n    \\n    '"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd992761",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "57e9bbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Permutation_importance  RF_importance\n",
+      "Sex                     0.189686       0.440879\n",
+      "Pclass                  0.095067       0.125320\n",
+      "Fare                    0.019731       0.182805\n",
+      "Age                     0.018834       0.190689\n",
+      "Parch                   0.003363       0.013445\n",
+      "Embarked               -0.001570       0.024462\n",
+      "SibSp                  -0.009641       0.022399\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's find what parameters are important\n",
+    "\n",
+    "from sklearn.base import clone\n",
+    "\n",
+    "X = train_data[num + cat]\n",
+    "y = train_data[\"Survived\"]\n",
+    "\n",
+    "X_tr, X_val, y_tr, y_val = train_test_split(\n",
+    "    X, y, test_size=0.25, stratify=y, random_state=42\n",
+    ")\n",
+    "\n",
+    "# 2) Обучаем клон лучшей модели только на трейне\n",
+    "model_val = clone(best_model)\n",
+    "model_val.fit(X_tr, y_tr)\n",
+    "\n",
+    "# 3) Permutation importance по ИСХОДНЫМ признакам (длина = len(X_val.columns))\n",
+    "perm = permutation_importance(\n",
+    "    model_val, X_val, y_val,\n",
+    "    n_repeats=20, random_state=42, n_jobs=-1, scoring=\"accuracy\"\n",
+    ")\n",
+    "pi_orig = pd.Series(perm.importances_mean, index=X_val.columns).sort_values(ascending=False)\n",
+    "\n",
+    "# 4) Встроенная важность леса (после препроцессинга) и агрегация к исходным колонкам\n",
+    "feat_names = model_val.named_steps[\"prep\"].get_feature_names_out()\n",
+    "rf_imp = pd.Series(model_val.named_steps[\"clf\"].feature_importances_, index=feat_names)\n",
+    "\n",
+    "def to_orig(n: str) -> str:\n",
+    "    n = n.split(\"__\", 1)[-1]   # убираем \"num__\"/\"cat__\"\n",
+    "    return n.split(\"_\", 1)[0]  # \"Sex_female\" -> \"Sex\"\n",
+    "\n",
+    "groups = pd.Series([to_orig(n) for n in feat_names], index=feat_names)\n",
+    "rf_imp_agg = rf_imp.groupby(groups).sum()\n",
+    "\n",
+    "# 5) Сводная таблица: выравниваем по исходным признакам, чтобы не было рассинхрона\n",
+    "summary = pd.concat(\n",
+    "    [pi_orig.rename(\"Permutation_importance\"),\n",
+    "     rf_imp_agg.rename(\"RF_importance\")],\n",
+    "    axis=1\n",
+    ").fillna(0).sort_values(\"Permutation_importance\", ascending=False)\n",
+    "\n",
+    "print(summary.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "bdc6e452",
    "metadata": {
     "execution": {
@@ -414,6 +636,8 @@
     }
    ],
    "source": [
+    "predictions = best_model.predict(test_data[num + cat])\n",
+    "\n",
     "output = pd.DataFrame({'PassengerId': test_data.PassengerId, 'Survived': predictions})\n",
     "output.to_csv('submission.csv', index=False)\n",
     "print(\"Your submission was successfully saved!\")"
